tests/cases/smoke/invalid/expr_index_non_int.ty
var items: int[] = [1, 2, 3]
var i = 1.0
var bad = items[i]
